[gd_scene load_steps=3 format=3 uid="uid://config001"]

[ext_resource type="Script" path="res://scripts/ui/config_menu.gd" id="1_config"]
[ext_resource type="Font" uid="uid://hud_mono_font" path="res://resources/hud_font.tres" id="2_font"]

[node name="ConfigMenu" type="CanvasLayer"]
layer = 10
script = ExtResource("1_config")

[node name="Panel" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -350.0
offset_right = 250.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.8, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 48
text = "Game Config"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HungerToggle" type="CheckButton" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Hunger Depletion"

[node name="HealthToggle" type="CheckButton" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Health Drain (Starvation)"

[node name="WeatherDamageToggle" type="CheckButton" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Weather Damage (Storms/Cold)"

[node name="WeatherToggle" type="CheckButton" parent="Panel/VBoxContainer"]
layout_mode = 2
button_pressed = true
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Weather System"

[node name="UnlimitedFireToggle" type="CheckButton" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Unlimited Fire Burn Time"

[node name="ShowCoordinatesToggle" type="CheckButton" parent="Panel/VBoxContainer"]
layout_mode = 2
button_pressed = true
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Show Coordinates"

[node name="TreeRespawnContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TreeRespawnLabel" type="Label" parent="Panel/VBoxContainer/TreeRespawnContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Tree Respawn Time"

[node name="TreeRespawnSlider" type="HSlider" parent="Panel/VBoxContainer/TreeRespawnContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
min_value = 1.0
max_value = 30.0
step = 1.0
value = 7.0

[node name="TreeRespawnValue" type="Label" parent="Panel/VBoxContainer/TreeRespawnContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.85, 1.0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "1 day"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="DayLengthContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="DayLengthLabel" type="Label" parent="Panel/VBoxContainer/DayLengthContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Day Length"

[node name="DayLengthSlider" type="HSlider" parent="Panel/VBoxContainer/DayLengthContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
min_value = 1.0
max_value = 60.0
value = 20.0

[node name="DayLengthValue" type="Label" parent="Panel/VBoxContainer/DayLengthContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.85, 1.0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "20 min"
horizontal_alignment = 1

[node name="HSeparator3" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MusicToggle" type="CheckButton" parent="Panel/VBoxContainer"]
layout_mode = 2
button_pressed = true
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Background Music"

[node name="MusicVolumeContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="Panel/VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Music Volume"

[node name="MusicVolumeSlider" type="HSlider" parent="Panel/VBoxContainer/MusicVolumeContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
max_value = 100.0
value = 50.0

[node name="MusicVolumeValue" type="Label" parent="Panel/VBoxContainer/MusicVolumeContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.85, 1.0, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 28
text = "50%"
horizontal_alignment = 1

[node name="HSeparator4" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="HintLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_fonts/font = ExtResource("2_font")
theme_override_font_sizes/font_size = 32
text = "Press TAB to close"
horizontal_alignment = 1
